Finished horizontal scroll bar bug

--- a/QuizTake/static/css/navbar-custom.css
+++ b/QuizTake/static/css/navbar-custom.css
@@ -5,7 +5,7 @@
     position: static;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
 }
 
 .navbar-custom .navbar-brand {
