--- a/QuizTake/static/css/sidebar.css
+++ b/QuizTake/static/css/sidebar.css
@@ -14,14 +14,15 @@
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
+/*
 .sidebar-sticky {
     position: sticky;
-    top: 48px; /* Height of navbar */
+    top: 48px;
     height: calc(100vh - 48px);
     padding-top: 0.5rem;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
+    overflow-y: auto;
+} */
 
 .sidebar .nav-link {
     font-weight: 500;
